--- a/app/assets/stylesheets/admin/end_users.scss
+++ b/app/assets/stylesheets/admin/end_users.scss
@@ -38,7 +38,16 @@
   &_edit-btn {
     border: 1px solid gray;
     border-radius: 5px;
-    padding: 4px;
+    padding: 5px;
+    text-decoration: none!important;
+    color: black;
+    font-weight: 550;
+    margin-right: 20px;
+  }
+  &_block-btn {
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 5px;
     text-decoration: none!important;
     color: black;
     font-weight: 550;
@@ -47,6 +56,12 @@
 
 .admin-profile-detail {
   display: flex;
+  list-style: none;
+  margin-top: 12px;
+
+  li {
+    margin-right: 25px
+  }
 }
 .admin-user-name {
   font-weight: 550;
