--- a/app/views/admin/end_users/show.html.erb
+++ b/app/views/admin/end_users/show.html.erb
@@ -13,19 +13,19 @@
   <div class="col-xs-7 profile-foot">
     <div class="admin-link">
       <%= link_to "プロフィールを編集", edit_admin_end_user_path(@end_user), class: "admin-link_edit-btn", 'data-turbolinks': false %>
-      <%= link_to "ブロック一覧", admin_end_user_blockers_path(@end_user.id), class: "btn btn-default" %>
+      <%= link_to "ブロック一覧", admin_end_user_blockers_path(@end_user.id), class: "admin-link_block-btn" %>
     </div>
-    <div class="admin-profile-detail">
-      <h5 class="post-count">
+    <ul class="admin-profile-detail">
+      <li class="post-count">
         投稿<strong><%= @end_user.posts.count %></strong>件
-      </h5>
-      <h5 class="sex">
+      </li>
+      <li class="sex">
         性別：<strong><%= @end_user.sex %></strong>
-      </h5>
-      <h5 class="experience">
+      </li>
+      <li class="experience">
         レベル：<strong><%= @end_user.experience %></strong>
-      </h5>
-    </div>
+      </li>
+    </ul>
     <h4 class="admin-user-name">
       <%= @end_user.name %>
     </h4>
