--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,22 +1,29 @@
 <div class="col-xs-10 col-xs-offset-2 admin-content">
   <div class="text-left admin-content_top">
-    <img src='<%= @post.images.thumb_big.url %>' class="admin-content-image" alt="ユーザー投稿写真">
-    <%= link_to "投稿編集", edit_admin_post_path(@post.id), class: "btn-sm btn-default btn-info" %>
-    <%= link_to "マイページ", admin_end_user_path(@post.end_user.id), class: "btn-sm btn-default btn-primary" %>
-    <%= link_to "投稿削除", admin_post_path(@post.id), method: :delete, class: "btn-sm btn-default btn-danger" %>
+    <img src='<%= @post.images.url %>' class="admin-content-image" alt="ユーザー投稿写真">
+    <div class="subcontent">
+      <ul class="response-list">
+        <li class="response-list_detail">
+          <%= link_to "マイページ", admin_end_user_path(@post.end_user.id), class: "btn-sm btn-default btn-primary" %>
+        </li>
+        <li class="response-list_detail">
+          <%= link_to "投稿削除", admin_post_path(@post.id), method: :delete, class: "btn-sm btn-default btn-danger" %>
+        </li>
+      </ul>
+      <ul class="response-list">
+        <li class="response-list_detail">
+          <%= @favorites.count %>件のいいね<span class="link-btn btn-sm btn-default">詳細(仮)</span>
+        </li>
+        <li class="response-list_detail">
+          <%= @bookmarks.count %>件のストック<span class="link-btn btn-sm btn-default">詳細(仮)</span>
+        </li>
+        <li class="response-list_detail">
+          <%= @comments.count %>件のコメント<span class="link-btn btn-sm btn-default">詳細(仮)</span>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="admin-content_main">
-    <ul class="response-list">
-      <li class="response-list_detail">
-        <%= @favorites.count %>件のいいね<span class="link-btn btn-sm btn-default btn">詳細(仮)</span>
-      </li>
-      <li class="response-list_detail">
-        <%= @bookmarks.count %>件のストック<span class="link-btn btn-sm btn-default btn">詳細(仮)</span>
-      </li>
-      <li class="response-list_detail">
-        <%= @comments.count %>件のコメント<span class="link-btn btn-sm btn-default btn">詳細(仮)</span>
-      </li>
-    </ul>
     <table class="table table-bordered">
       <tbody>
         <tr>
@@ -39,7 +46,7 @@
         </tr>
       </tbody>
     </table>
-    <div class="main-left col-xs-5">
+    <div class="main-left col-xs-6">
       <table class="left-menu table table-bordered">
         <thead>
           <tr>
@@ -63,7 +70,7 @@
         </tbody>
       </table>
     </div>
-    <div class="main-right col-xs-5 col-xs-offset-1">
+    <div class="main-right col-xs-6">
       <table class="right-menu table table-bordered">
         <thead>
           <tr>
