[update]adminレイアウト

--- a/app/assets/stylesheets/admin/contacts.scss
+++ b/app/assets/stylesheets/admin/contacts.scss
@@ -4,3 +4,13 @@
 .denger-message {
   color: red;
 }
+
+#contact_checked {
+  padding: 5px;
+  border-radius: 1em;
+  margin-right: 10px;
+}
+.contact-update-btn {
+  padding: 3px;
+  border-radius: 0.2em;
+}
