--- a/app/assets/stylesheets/end_user/notifications.scss
+++ b/app/assets/stylesheets/end_user/notifications.scss
@@ -5,7 +5,8 @@
   border: 1px solid rgba(211,211,211,0.5);
   background-color: white;
   padding: 10px;
-  min-height: 600px!important;
+  min-height: 600px;
+  max-height: 600px;
   .notice-title {
     font-size: 16px;
   }
@@ -29,6 +30,7 @@
 .notice-main {
   margin: 5px 0;
   min-height: 500px;
+  max-height: 500px;
   overflow-y: scroll;
 }
 .user-notice {
