--- a/app/assets/stylesheets/admin/end_users.scss
+++ b/app/assets/stylesheets/admin/end_users.scss
@@ -67,3 +67,69 @@
   font-weight: 550;
 }
 // ここまで
+
+// edit
+.edit-box {
+  border: 1px solid rgba(211,211,211,0.5);
+  border-radius: 0.2em;
+  background-color: white;
+  padding: 10px;
+  margin-top: 35px;
+
+  .edit-count {
+    display: flex;
+    justify-content: flex-end;
+    margin: 2px 0;
+
+    .js-text-count {
+      font-size: 10px;
+      margin: 0 80px;
+    }
+  }
+
+  .edit-introduction {
+    display: flex;
+    margin: 18px 0 2px 0;
+
+    label {
+      margin: 0;
+      width: 120px;
+      text-align: right;
+    }
+    .edit-icon, i {
+      width: 10px;
+      margin-right: 25px;
+      color: red;
+      font-size: 0.7em;
+    }
+    input, textarea, select {
+      padding: 5px;
+      border-radius: 0.2em;
+      border: 1px solid rgba(211,211,211,0.9);
+      outline: none;
+    }
+  }
+
+  .edit-flex {
+    display: flex;
+    margin: 18px 0;
+
+    label {
+      margin: 0;
+      width: 120px;
+      text-align: right;
+    }
+    .edit-icon, i {
+      width: 10px;
+      margin-right: 25px;
+      color: red;
+      font-size: 0.7em;
+    }
+    input, textarea, select {
+      padding: 5px;
+      border-radius: 0.2em;
+      border: 1px solid rgba(211,211,211,0.9);
+      outline: none;
+    }
+  }
+}
