[update]end_user/homes/top

--- a/app/views/end_user/homes/top.html.erb
+++ b/app/views/end_user/homes/top.html.erb
@@ -26,5 +26,5 @@
     <li class="scroll-event"><a href="#" class="scroll-btn"><i class="fas fa-long-arrow-alt-up"></i></a></li>
   </ul>
 </div>
-<div class="top-main">あああああああああああ</div>
+<div class="top-main"></div>
 
