[fix]image_path

--- a/app/assets/stylesheets/end_user/homes.scss
+++ b/app/assets/stylesheets/end_user/homes.scss
@@ -10,7 +10,7 @@
   background-image: image-url('../diy_app_back.jpg');
 }
 .circle-image-1 {
-  background-image: image-url('../diy_app1.jpg');
+  background-image: image-url('diy_app1.jpg');
   background-size: cover;
   background-position: center;
   border-radius: 50%;
