--- a/app/views/end_user/posts/show.html.erb
+++ b/app/views/end_user/posts/show.html.erb
@@ -40,7 +40,7 @@
     <h5 class="content_title"><%= @post.title %>【<%= @post.genre.name %>】</h5>
     <div class="content_image">
       <div class="post-img text-center">
-        <img src='<%= @post.images.url %>' class="img-size" alt="ユーザー投稿写真" >
+        <img src='<%= @post.images.url %>' class="img_size" alt="ユーザー投稿写真" >
       </div>
 
       <div class="detail-materials">
