--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -1,6 +1,6 @@
 <div id="sidebar-wrapper">
   <div class="logo">
-    LOGO
+    <h2 class="admin-logo">つくログ</h2>
   </div>
   <div class="admin-search text-center">
     <%= form_with url: admin_search_path, method: :get, local: true do |f| %>
