--- a/app/views/end_user/end_users/show.html.erb
+++ b/app/views/end_user/end_users/show.html.erb
@@ -72,7 +72,7 @@
             </div>
           <% end %>
           <% if @public_posts.empty? %>
-            <div>
+            <div class="image-empty-box">
               <p class="image-empty-text">投稿はありません</p>
             </div>
           <% end %>
@@ -105,7 +105,7 @@
               </div>
           <% end %>
           <% if @bookmarks.empty? %>
-            <div>
+            <div class="image-empty-box">
               <p class="image-empty-text">ストックはありません</p>
             </div>
           <% end %>
