--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class="navbar-fixed-bottom">
-  <p class="text-center">©Do it yourself</p>
+  <p class="text-center">©tsukulog.work</p>
 </footer>
