--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,10 @@
     <h4>
       <% if end_user_signed_in? %>
         <span data-toggle="tooltip" data-placement="bottom" title="投稿一覧">
-          <%= link_to "LOGO", posts_path('order': "none", 'terms': "none"), class: "header-logo", 'data-turbolinks': false %>
+          <%= link_to "つくログ", posts_path('order': "none", 'terms': "none"), class: "header-logo", 'data-turbolinks': false %>
         </span>
       <% else %>
-        <h4 class="header-logo-position">Do it yourself!</h4>
+        <h4 class="header-logo-position">つくログ</h4>
       <% end %>
     </h4>
   </nav>
