[update]rspec/system/rilationship production.rb

--- a/app/views/end_user/favorites/_favorite_user.html.erb
+++ b/app/views/end_user/favorites/_favorite_user.html.erb
@@ -1,6 +1,6 @@
-<p type="" id="favorite-button" class="text-right">
+<a type="" id="favorite-button" class="text-right">
   いいね一覧を見る...
-</p>
+</a>
 
 <!-- モーダル・ダイアログ -->
 <div class="modal fade" id="favorite-modal" tabindex="-1">
