--- a/app/assets/stylesheets/end_user/posts.scss
+++ b/app/assets/stylesheets/end_user/posts.scss
@@ -41,8 +41,12 @@
   border: 1px solid gray;
   border-radius: 0.67em;
   cursor: pointer;
-  max-height: 100px;
+  max-height: 230px;
 }
+// #img_prev {
+//   width: 290px;
+//   height: 230px!important;
+// }
 
 .form-half-right {
   padding: 0 0 0 20px!important;
