[update]readme.mb

--- a/app/views/end_user/end_users/_search_index.html.erb
+++ b/app/views/end_user/end_users/_search_index.html.erb
@@ -1,4 +1,5 @@
 <main class="search-all col-xs-11 jscroll jscroll-select">
+  <h5>ユーザー検索結果</h5>
   <table class="table">
     <tbody>
     <% end_users.each do |end_user| %>
