--- a/app/assets/stylesheets/end_user/searchs.scss
+++ b/app/assets/stylesheets/end_user/searchs.scss
@@ -4,8 +4,19 @@
 .search-box {
   border-bottom: 1px solid rgba(192,192,192,0.7);
   border-top: 1px solid rgba(192,192,192,0.7);
-  padding: 10px 0;
+  padding: 5px 0;
   .search-select {
     margin-top: 6px;
+  }
+}
+
+.search-all {
+  background-color: white;
+  padding: 10px;
+  border: 1px solid rgba(211,211,211,0.5);
+
+  h5 {
+    margin: 0 0 0 20px;
+    padding-bottom: 15px;
   }
 }
