--- a/app/views/end_user/end_users/edit.html.erb
+++ b/app/views/end_user/end_users/edit.html.erb
@@ -15,18 +15,18 @@
     <div class="edit-flex">
       <%= f.label :name, "名前" %>
       <i class="glyphicon glyphicon-asterisk edit-icon" aria-hidden="true"></i>
-      <%= f.text_field :name, size: "41" %>
+      <%= f.text_field :name, style: "width: 21vw;" %>
     </div>
     <div class="edit-introduction">
       <%= f.label :introduction, "自己紹介" %><i></i>
-      <%= f.text_area :introduction, size: "40x3", class: "js-text" %>
+      <%= f.text_area :introduction, style: "width: 21vw; height: 10vh;", class: "js-text" %>
     </div>
     <div class="edit-count">
       <P class="js-text-count" data-index="50"></P>
     </div>
     <div class="edit-flex">
       <%= f.label :address, "地域(住所)" %><i></i>
-      <%=f.text_field :address, size: "41" %>
+      <%=f.text_field :address, style: "width: 21vw;" %>
     </div>
     <div class="edit-flex">
       <%= f.label :experience, "熟練度" %><i></i>
