--- a/app/assets/stylesheets/end_user/end_users.scss
+++ b/app/assets/stylesheets/end_user/end_users.scss
@@ -21,11 +21,12 @@
 // show
 
 .profile {
-  min-height: 200px;
+  height: 25vh;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  padding-top: 20px;
+  padding-top: 4vh;
+  margin-bottom: 5vh;
 
   &_image {
 
@@ -140,9 +141,9 @@
   flex-flow: row wrap;
 }
 .post-image {
-  width: 310px;
-  height: 230px;
-  margin: 5px 5px 0 0;
+  width: 20.1vw;
+  height: 30vh;
+  margin: 0.5vh 0.2vw 0 0;
 }
 
 // end_user/mutual_follow
@@ -187,7 +188,7 @@
   border-radius: 0.2em;
   background-color: white;
   padding: 10px;
-  margin-top: 35px;
+  margin: 4vh;
 
   .edit-count {
     display: flex;
@@ -196,7 +197,7 @@
 
     .js-text-count {
       font-size: 10px;
-      margin: 0 80px;
+      margin: 0 6vw;
     }
   }
 
@@ -225,7 +226,7 @@
 
   .edit-flex {
     display: flex;
-    margin: 18px 0;
+    margin: 3vh 0;
 
     label {
       margin: 0;
