--- a/app/assets/stylesheets/end_user/blocks.scss
+++ b/app/assets/stylesheets/end_user/blocks.scss
@@ -7,8 +7,14 @@
   background-color: white;
   padding: 10px;
   margin-right: 10px;
-  min-height: 560px!important;
+  height: 84vh;
   overflow-y: scroll!important;
+
+  h4 {
+    border-bottom: 1px dotted gray;
+    margin: 0;
+    padding: 5px 0 10px;
+  }
 
   .unblock-content {
     width: 360px;
