[update]block機能リファクタリング

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,13 @@ footer {
   }
 }
 
+.alert {
+  margin: 0;
+  padding: 0;
+  color: red;
+  font-weight: bold;
+}
+
 .container {
   margin-top: 10vh;
   width: 76vw;
