--- a/app/views/end_user/end_users/show.html.erb
+++ b/app/views/end_user/end_users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="col-xs-10 text-center col-xs-offset-1">
+  <div class="alert">
+    <%= flash[:danger] %>
+  </div>
   <div class="col-xs-3 col-xs-offset-1">
     <div class="profile">
       <div class="profile_image">
