[update]楽天商品検索完成

--- a/app/assets/stylesheets/end_user/blocks.scss
+++ b/app/assets/stylesheets/end_user/blocks.scss
@@ -6,7 +6,7 @@
   border-radius: 0.2em;
   background-color: white;
   padding: 10px;
-  margin-right: 10px;
+  margin: 0 10px 10vh 0;
   height: 84vh;
   overflow-y: scroll!important;
 
