--- a/app/assets/stylesheets/end_user/searchs.scss
+++ b/app/assets/stylesheets/end_user/searchs.scss
@@ -13,10 +13,66 @@
 .search-all {
   background-color: white;
   padding: 10px;
+  margin-bottom: 10vh;
   border: 1px solid rgba(211,211,211,0.5);
 
   h5 {
     margin: 0 0 0 20px;
     padding-bottom: 15px;
+  }
+}
+
+// rakuten検索view
+.rakuten-search {
+  margin-bottom: 10vh;
+  border: 1px solid rgba(211,211,211,0.5);
+  background-color: white;
+
+  &_box {
+    padding: 18px 20px 4px;
+
+    form {
+
+      .rakuten-search-form {
+        padding: 0.4rem;
+        border-radius: 0.2rem;
+        border: 1px solid rgba(211,211,211,0.5);
+        outline: none;
+        width: 24vw;
+      }
+
+      .rakuten-search-btn {
+        background-color: rgba(211,211,211,0.5);
+        padding: 0.25rem;
+        border: 1px solid rgba(211,211,211,0.5);
+        border-radius: 0.2rem;
+      }
+    }
+  }
+}
+.rakuten-items {
+  padding: 14px;
+
+  a {
+
+    section.item-detail {
+      padding: 6px;
+      display: flex;
+      border-bottom: 1px dotted rgba(211,211,211,0.5);
+
+      .item-image {
+        border-radius: 0.2rem;
+      }
+
+      ul {
+        padding: 4px 0 0 8px;
+        list-style: none;
+
+        li.item-price {
+          margin-top: 10px;
+          text-align: right;
+        }
+      }
+    }
   }
 }
