--- a/app/views/end_user/end_users/show.html.erb
+++ b/app/views/end_user/end_users/show.html.erb
@@ -46,7 +46,7 @@
     </div>
   </div>
 </div>
-<div class="col-xs-10 col-xs-offset-1">
+<div class="col-xs-10 col-xs-offset-1 mypage-foot">
   <div>
     <ul class="nav nav-tabs nav-justified" role="tablist">
       <li class="active" role="presentation">
