--- a/app/views/end_user/searchs/index.html.erb
+++ b/app/views/end_user/searchs/index.html.erb
@@ -1,25 +1,27 @@
-<div class="col-xs-10 col-xs-offset-1">
-  <div class="rakuten-search-box">
+<div class="col-xs-8 col-xs-offset-2 rakuten-search">
+  <div class="rakuten-search_box">
     <%= form_with url: rakuten_search_path, method: :get, local: true do |f| %>
-      <%= f.text_field 'keyword', placeholder: "検索ワードを入力...", class: "rakuten_search_form" %>
-      <%= f.submit "検索", class: "rakuten_search_btn" %>
+      <%= f.text_field 'keyword', placeholder: "検索ワードを2文字以上で入力...", class: "rakuten-search-form" %>
+      <%= f.submit "検索", class: "rakuten-search-btn" %>
     <% end %>
   </div>
   <div class="alert">
     <%= flash[:danger] %>
   </div>
-  <div class="rakuten_items">
+  <div class="rakuten-items">
     <% if @items.present? %>
       <% @items.each do |item| %>
-        <%= link_to "#{item.url}" do %>
+        <%= link_to "#{item.url}", target: :_blank do %>
           <section class="item-detail">
             <%= image_tag item["mediumImageUrls"][0], class: "item-image" %>
-            <p><%= item.name %></p>
-            <p><%= item.price %>円</p>
+            <ul>
+              <li><%= item.name %></li>
+              <li class="item-price"><%= item.price %>円</li>
+            </ul>
           </section>
         <% end %>
       <% end %>
-    <% elsif @items.nil? %>
+    <% else %>
       <p>該当する商品はありません</p>
     <% end %>
   </div>
